--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,10 @@
 }
 
 .form {
-  padding: 50px 20% 50px 20%;
+  margin: 50px 20% 50px 20%;
+  padding: 40px 60px 60px 60px;
   background-color: #f5f7fa;
+  border-radius: 20px;
 }
 
 .result .react-json-view {
