--- a/src/App.css
+++ b/src/App.css
@@ -71,3 +71,16 @@
   text-align: right;
   padding-right: 0;
 }
+
+.app-footer {
+  background-color:#eaeaea;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+}
+
+.footer-container {
+  margin: 0;
+  padding-top: 5px;
+}
